SC - fixed collapsable and alert modals, save btn on admin config and loading report in new tab
git-svn-id: https://webgate.ec.europa.eu/CITnet/svn/UNIONVMS/branches/dev/unionvms-web@13420 ffa9caa6-9a2d-11e4-8c71-fd203efb3018

--- a/app/directive/common/alertModal/alertModal.less
+++ b/app/directive/common/alertModal/alertModal.less
@@ -1,6 +1,8 @@
 .alert-modal-content {
   position: absolute;
-  overflow: hidden;
+  overflow: visible;
+  bottom: auto;
+  height: 0;
   .modal-lg {
     width: 100%;
   }
@@ -8,6 +10,7 @@
   .modal-dialog {
     padding: 0px;
     margin: 0px;
+    height: 0;
     .modal-content {
       border-radius: 4px;
       box-shadow: 0 3px 9px rgba(0,0,0,.5);
@@ -64,6 +67,7 @@
   }
 }
 .alert-modal-backdrop {
-	background-color: rgba(221, 221, 221, 0.4);
-	z-index: 1048 !important;
+  background-color: rgba(221, 221, 221, 0.4);
+  z-index: 1048 !important;
+  bottom: auto;
 }
