--- a/app/partial/admin/adminConfiguration/configurationReporting/configurationReporting.less
+++ b/app/partial/admin/adminConfiguration/configurationReporting/configurationReporting.less
@@ -1,6 +1,6 @@
 .spatialConfig {
 	.saveBtn {
-		margin-right: 22px;
+		margin-right: 15px;
 	}
 }
 
@@ -14,5 +14,6 @@
 	.containerCollapsible{
 		margin-left: 8px;
 		margin-right: 8px;
+		padding-bottom: 10px;
 	}
 }
