--- a/app/partial/spatial/liveViewPanel/vmsPanel/vmsPanel.less
+++ b/app/partial/spatial/liveViewPanel/vmsPanel/vmsPanel.less
@@ -235,3 +235,13 @@ div.table-tools i {
 .lr-drop-target-after{
   border-right: 5px solid @primaryColor;
 }
+
+.vmspanel-modal {
+	overflow: auto;
+	&.collapsed {
+		bottom: auto;
+		.modal-dialog {
+			margin: 30px auto 5px auto;
+		}
+	}
+}
