--- a/app/partial/spatial/spatial.less
+++ b/app/partial/spatial/spatial.less
@@ -402,5 +402,9 @@ div.td:extend(td all) {}
 }
 
 .liveview-loading {
-	height: calc(~"100vh - 100px");
+	height: calc(~"100vh - @headerHeight");
+}
+
+.is-loading-new-tab {
+	height: calc(~"100vh - 55px");
 }
